# Multimodal-RAG-Impact-Assessment

./: .gitignore  COPY_TO_SHARED.sh  COWORKER_SETUP_GUIDE.md  DATA_COUNTS_UPDATE_PROMPT.txt  README.md  ZIP_CODE_UPDATE_PROMPT.txt  demo_query.py  pyproject.toml  run.sh
.cursor/commands/: prepare-for-public-push.md
app/: config.py  main.py
app/core/: logging.py
app/routers/: chat.py  query.py
config/: queries_20_random.json  queries_25_balanced.json  queries_full_139.json  queries_heldout_test_99.json
data/examples/: annotation_queries.json  eval_config_with_retrieval.json  retrieval_gt.json
data/experiments/: dev50_multimodal_fixed.json  dev50_text_caption_fixed.json  dev50_text_only_fixed.json  dev_baseline_multimodal.json  dev_baseline_multimodal_fixed.json  dev_baseline_text_caption.json  dev_baseline_text_only.json  exp_multimodal_fixed.json  exp_multimodal_sensor_fixed.json  exp_multimodal_temporal_tuned.json  exp_multimodal_v2.json  exp_multimodal_v3.json  exp_multimodal_v4_textguided.json  exp_multimodal_v5_heuristic.json  exp_text_caption_fixed.json  exp_text_caption_v2.json  (+7 more)
fastapi/: __init__.py
harvey_rag/: .env.example  README.md  pyproject.toml
scripts/: annotate_retrieval_gt.py  build_imagery_index.py  extract_imagery_metadata.py  fix_claims.py  generate_heldout_test_config.py  ingest_tweets.py  rebuild_all_indexes.py  run_baseline_experiment.py  run_dev_baselines.sh  tile_large_imagery.py  validate_data_integrity.py  visualize_coverage.py
tests/: test_spatial.py  test_text_client.py  test_visual_analysis.py  test_visual_retrieval.py
(+61 files in other folders)
